Time: 7 ms (97.97%), Space: 65.2 MB (72.88%) - LeetHub